<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MiniProject</string>
    <string name="add_a_bicycle">Add A Bicycle</string>
    <string name="select_type">Select Type</string>
    <string name="select_district">Select District</string>
    <string name="add">ADD</string>
    <string name="view_bicycle">View Bicycle</string>
    <string name="to_home">To Home</string>
    <string name="showType" tools:ignore="DuplicateDefinition">showType</string>
    <string name="Type" />
    <string name="additional_details">Additional Details</string>
    <string name="add_location">Add Location</string>
    <string name="upload_a_photo">Upload a photo</string>
</resources>