<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



 <TextView
     android:id="@+id/textAddBicycle"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="100dp"
     android:text="@string/add_a_bicycle"
     android:textAppearance="@style/TextAppearance.AppCompat.Display2"
     android:textColor="@color/teal_700"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.082" />

 <TextView
     android:id="@+id/textType"
     android:layout_width="200dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="50dp"
     android:layout_marginTop="244dp"
     android:text="@string/select_type"
     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />



 <Spinner
     android:id="@+id/spinnerType"
     android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="50dp"
     android:layout_marginTop="284dp"
     android:layout_marginEnd="200dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.006"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     tools:ignore="SpeakableTextPresentCheck" />

 <TextView
     android:id="@+id/textDistrict"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="50dp"
     android:layout_marginTop="376dp"
     android:text="@string/select_district"
     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />

 <Spinner
     android:id="@+id/spinnerDistrict"
     android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="50dp"
     android:layout_marginTop="416dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />

 <Button
     android:id="@+id/buttonAddBicycle"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="588dp"
     android:text="@string/add"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.47"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />

 <Button
     android:id="@+id/buttonViewBicycle"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginEnd="20dp"
     android:layout_marginBottom="28dp"
     android:text="@string/view_bicycle"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.861"
     app:layout_constraintStart_toStartOf="parent" />

 <Button
     android:id="@+id/buttonHome"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="50dp"
     android:layout_marginBottom="30dp"
     android:text="@string/to_home"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent" />

 <EditText
     android:id="@+id/editTextTextPersonName"
     android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="50dp"
     android:ems="10"
     android:inputType="textLongMessage"
     android:text="@string/additional_details"
     app:layout_constraintStart_toStartOf="parent"
     tools:layout_editor_absoluteY="520dp"
     tools:ignore="MissingConstraints" />

 <ImageView
     android:id="@+id/imageView"
     android:layout_width="94dp"
     android:layout_height="79dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.485"
     app:layout_constraintStart_toStartOf="parent"
     app:srcCompat="@drawable/bef6107f_9e44_4aad_898d_c2d92519583f"
     tools:layout_editor_absoluteY="41dp"
     tools:ignore="MissingConstraints" />

 <Button
     android:id="@+id/buttonOpenMap"
     android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="48dp"
     android:background="#54E15A"
     android:text="@string/add_location"
     app:layout_constraintStart_toStartOf="parent"
     tools:layout_editor_absoluteY="321dp"
     tools:ignore="MissingConstraints"/>

 <Button
     android:id="@+id/buttoUploadImage"
     android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="50dp"
     android:text="@string/upload_a_photo"
     app:layout_constraintStart_toStartOf="parent"
     tools:layout_editor_absoluteY="458dp"
     tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>